--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+data/
+.DS_Store
+
 # Gradle files
 .gradle/
 build/
@@ -12,7 +15,7 @@ local.properties
 captures/
 .externalNativeBuild/
 .cxx/
-*.apk
+# *.apk
 output.json
 
 # IntelliJ
